--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <div class="col-lg-7 cont-inf" data-aos="fade-right" data-aos-duration="3000">
                         <h2>Sobre mí</h2>
                         <p>Hola, soy Efrain, les traigo vivencias desde unas narrativas reales, estos son pequeños segmentos adornados entre saltando lo lineal, estas anecdotas o fragmentos son huellas
-                            de un soñador que batalla, que sufre y que goza entre vuelas y aterrizajes, dándose sobre propulsas en busca de las visicitudes de esta palestra tierra.</p>
+                            de un soñador que batalla, que sufre y que goza entre vuelas y aterrizajes, dándose sobre propulsas en busca de abrir sus alas en el trasegar de las visicitudes de esta palestra tierra.</p>
                     </div>
 
                     <div class="col-lg-5 cont-ima" data-aos="fade-left" data-aos-duration="3000">
@@ -101,8 +101,8 @@
                 <div class="row">
                     <div class="col-lg-6 cont-infos" data-aos="fade-right" data-aos-duration="3000">
                         <h2>Servicio de fotografia</h2>
-                        <p>Hola, soy Efrain y como fotoafiches les ofresco un servicio en fotografías ampliadas y personalizadas en base al gusto de ustedes, este es un ensamble sobre retablo antihumedad,
-                         con impresiones fotográficas lavables en mate y brillante, entre otros servicios referentes marquetería envios a cualquier parte de Colombia.</p>
+                        <p>Hola, soy Efrain y como fotoafiches ofresco un servicio en fotografías ampliadas y personalizadas en base al gusto de ustedes, este es un ensamble sobre retablo antihumedad,
+                         con impresiones fotográficas lavables en mate y brillante, entre otros servicios referentes a marquetería envios a cualquier parte de Colombia.</p>
                         
                         <a href="https://wa.link/o8oobr"><img src="img/what.png" alt="whatsapp"></a>
                     </div>
