--- a/index.html
+++ b/index.html
@@ -85,8 +85,7 @@
                     </div>
                     <div class="col-lg-6 cont-infov" data-aos="fade-right" data-aos-duration="3000">
                         <h3>Mis videos</h3>
-                        <p>Disfruta todo el contenido disponible en mis redes <br> sociales sobre
-                        motivación, musica, poesía y mucho más.</p>
+                        <p>Hola, yo Efrain soy compositor y tengo letras de canciones ineditas que nacieron de iluciones y también de fracasos las cuales exhibo para quien guste y quiera negociar el derecho a grabarlas, sigueme para más.</p>
                         <div class="cont-redes" data-aos="fade-left" data-aos-duration="3000">
                             <p><a href="https://www.facebook.com/profile.php?id=61559018873783"><img src="img/face.png" alt="facebook"></a></p>
                             <p><a href="#"><img src="img/tik-tok.png" alt="tik-tok"></a></p>
