--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <article class="row">
                     <div class="col-lg-6 info" data-aos="fade-down"data-aos-easing="linear" data-aos-duration="1500">
                         <h1>Hola!</h1>
-                        <p>Soy Efrain Gezbar, yo Efrain desde Gezbar busco abrir unas ventanas que nos adentren hasta los lindes que llevan al mundo del alma, les invito de manera reverente a que vayamos un poco más allá
+                        <p>Soy Efrain Gezbar, yo Efrain desde Gezbar busco abrir unas ventanas que nos adentren hasta los lindes que llevan al mundo del alma, les invito de manera reverente vayamos un poco más allá
                             de aquellas doctrinas o sistemas inplantados, rompamos los muros y vayamos al gran encuentro con nosotros mismos, sin jactancia y de manera humilde les puedo decir que traigo conmigo
                             unas opticas que nos puenden acercar hasta los valles del autoconocimiento, sigueme para más</p>
                         <a href="#videos">Conoce más aquí</a>
