--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <article class="container" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="3000">
             <h2>Contáctame</h2>
             <p>Para más información comunicate al número celular <a href="https://wa.link/o8oobr" target="_blank"> 3223611781</a></p>
-            <p>o al correo <a href="mailto:fotoafichesplus@gmail.com?Subject=Me20%gustaria20%conocer20%más20%sobre20%el20%servicio20%de20%fotografía"> Fotoafichesplus@gmail.com </a> </p>
+            <p>o al correo <a href="mailto:efraingezbar@gmail.com?Subject=Me20%gustaria20%conocer20%más20%sobre20%el20%servicio20%de20%fotografía"> Fotoafichesplus@gmail.com </a> </p>
         </article>
         </section>
     </main>
