--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
                         <h3>Mis videos</h3>
                         <p>Hola, yo Efrain soy compositor y tengo letras de canciones ineditas que nacieron de iluciones y también de fracasos las cuales exhibo para quien guste y quiera negociar el derecho a grabarlas, sigueme para más.</p>
                         <div class="cont-redes" data-aos="fade-left" data-aos-duration="3000">
-                            <p><a href="https://www.facebook.com/profile.php?id=61559018873783"><img src="img/face.png" alt="facebook"></a></p>
-                            <p><a href="https://www.tiktok.com/@efraingezbar?is_from_webapp=1&sender_device=pc"><img src="img/tik-tok.png" alt="tik-tok"></a></p>
-                            <p><a href="https://www.instagram.com/efraingezbar/"><img src="img/insta.png" alt="instagram"></a></p>
+                            <p><a href="https://www.facebook.com/profile.php?id=61559018873783" target="_blank"><img src="img/face.png" alt="facebook"></a></p>
+                            <p><a href="https://www.tiktok.com/@efraingezbar?is_from_webapp=1&sender_device=pc" target="_blank"><img src="img/tik-tok.png" alt="tik-tok"></a></p>
+                            <p><a href="https://www.instagram.com/efraingezbar/" target="_blank"><img src="img/insta.png" alt="instagram"></a></p>
                         </div>
                     </div>
                 </article>
