actualizacion de css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">    
     <link rel="stylesheet" href="css/style.css">
-    <title>Oscar Photos</title>
+    <link rel="Gezar logo" href="img/logo.png" />
+    <title>Efrain Gezbar</title>
 </head>
 
 <body>
@@ -114,11 +115,13 @@
         </section>
 
         <section id="contacto">
-        <article class="container" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="3000">
-            <h2>Contáctame</h2>
-            <p>Para más información comunicate al número celular <a href="https://wa.link/o8oobr" target="_blank"> 3223611781</a></p>
-            <p>o al correo <a href="mailto:efraingezbar@gmail.com?Subject=Me20%gustaria20%conocer20%más20%sobre20%el20%servicio20%de20%fotografía"> Fotoafichesplus@gmail.com </a> </p>
-        </article>
+        <div class="container">
+            <article class="container" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="3000">
+                <h2>Contáctame</h2>
+                <p>Para más información comunicate al número celular <a href="https://wa.link/o8oobr" target="_blank"> 3223611781</a></p>
+                <p>o al correo <a href="mailto:efraingezbar@gmail.com?Subject=Me20%gustaria20%conocer20%más20%sobre20%el20%servicio20%de20%fotografía"> Fotoafichesplus@gmail.com </a> </p>
+            </article>
+        </div>
         </section>
     </main>
 
