--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">    
     <link rel="stylesheet" href="css/style.css">
     <link rel="Gezar logo" href="img/logo.png" />
-    <title>Efrain Gezbar</title>
+    <title>Gezbar</title>
 </head>
 
 <body>
     <header>
         <nav class="navbar navbar-expand-lg bg-navefra">
             <div class="container">
-                <a class="navbar-brand" href="#"><img src="img/logo.png" alt="logo-efra"></a>
+                <a class="navbar-brand" href="#"><img src="img/logo.jpg" alt="logo-efra"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -24,10 +24,10 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#about">Sobre mi</a>
+                            <a class="nav-link" aria-current="page" href="#about">Pensamiento</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#videos">videos</a>
+                            <a class="nav-link" href="#videos">Gezbar</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#servicios">Servicios</a>
@@ -44,14 +44,14 @@
             <div class="container">
                 <article class="row">
                     <div class="col-lg-6 info" data-aos="fade-down"data-aos-easing="linear" data-aos-duration="1500">
-                        <h1>Hola!</h1>
-                        <p>Soy Efrain Gezbar, yo Efrain desde Gezbar busco abrir unas ventanas que nos adentren hasta los lindes que llevan al mundo del alma, les invito de manera reverente vayamos un poco más allá
-                            de aquellas doctrinas o sistemas inplantados, rompamos los muros y vayamos al gran encuentro con nosotros mismos, sin jactancia y de manera humilde les puedo decir que traigo conmigo
-                            unas opticas que nos puenden acercar hasta los valles del autoconocimiento, sigueme para más</p>
+                        <h1>Pensamiento Gezbar</h1>
+                        <p>Según GEZBAR todos podemos caminar hacia un entendimiento mayor en cuanto a lo espiritual, 
+                            dice GEZBAR que si nos paramos desde la plataforma del raciocinio interior podemos mirar un 
+                            poco más allá de los cuatro mil doscientos cercos religiosos ya existentes.</p>
                         <a href="#videos">Conoce más aquí</a>
                     </div>
                     <div class="col-lg-6 cont-foto" data-aos="fade-up" data-aos-duration="3000">
-                        <img src="img/Foto.png" alt="foto">
+                        <img src="img/Foto.jpg" alt="foto">
                     </div>
                 </article>
             </div>
@@ -63,14 +63,17 @@
             <article class="container">
                 <section class="row">
                     <div class="col-lg-7 cont-inf" data-aos="fade-right" data-aos-duration="3000">
-                        <h2>Sobre mí</h2>
-                        <p>Hola, soy Efrain, les traigo vivencias desde unas narrativas reales, estos son pequeños segmentos adornados entre saltando lo lineal, estas anecdotas o fragmentos son huellas
-                            de un soñador que batalla, que sufre y que goza entre vuelas y aterrizajes, dándose sobre propulsas en busca de abrir sus alas en el trasegar de las visicitudes de esta palestra tierra.</p>
+                        <h2>Desde Gezbar</h2>
+                        <p>Según GEZBAR desde la plataforma del raciocinio interior podemos mirar o 
+                            desnudar aquello que desde la carne o desde el mundo vemos cómo verdad. <br> <br> 
+                        
+                            Según GEZBAR y es bien sabido que las religiones nos acercan a Dios, pero es desde 
+                            el amor y el raciocinio en Cristo que se gana la salvación.</p>
                     </div>
 
                     <div class="col-lg-5 cont-ima" data-aos="fade-left" data-aos-duration="3000">
                         <div class="sombra">
-                            <img src="img/lectura.png" alt="hombre leyendo">
+                            <img src="img/lectura.jpg" alt="hombre leyendo">
                         </div>
                     </div>
                 </section>
@@ -82,11 +85,11 @@
             <article class="container">
                 <article class="row">
                     <div class="col-lg-6 cont-fotov" data-aos="fade-left" data-aos-duration="3000">
-                        <img src="img/videos-redes.jpg" alt="foto-videos">
+                        <img src="img/video.jpg" alt="foto-videos">
                     </div>
                     <div class="col-lg-6 cont-infov" data-aos="fade-right" data-aos-duration="3000">
-                        <h3>Mis videos</h3>
-                        <p>Hola, yo Efrain soy compositor y tengo letras de canciones ineditas que nacieron de iluciones y también de fracasos las cuales exhibo para quien guste y quiera negociar el derecho a grabarlas, sigueme para más.</p>
+                        <h3>Gezbar Frases y Poemas</h3>
+                        <p>GEZBAR desde sus videos habla de lo intangible, habla del alma y de aquello que podemos llegar a observar desde la cima de nuestra gran pupila mental.</p>
                         <div class="cont-redes" data-aos="fade-left" data-aos-duration="3000">
                             <p><a href="https://www.facebook.com/profile.php?id=61559018873783" target="_blank"><img src="img/face.png" alt="facebook"></a></p>
                             <p><a href="https://www.tiktok.com/@efraingezbar?is_from_webapp=1&sender_device=pc" target="_blank"><img src="img/tik-tok.png" alt="tik-tok"></a></p>
@@ -96,30 +99,12 @@
                 </article>
         </section>
 
-        <section id="servicios">
-            <article class="container">
-                <div class="row">
-                    <div class="col-lg-6 cont-infos" data-aos="fade-right" data-aos-duration="3000">
-                        <h2>Servicio de fotografia</h2>
-                        <p>Hola, soy Efrain y como fotoafiches ofresco un servicio en fotografías ampliadas y personalizadas en base al gusto de ustedes, este es un ensamble sobre retablo antihumedad,
-                         con impresiones fotográficas lavables en mate y brillante, entre otros servicios referentes a marquetería envios a cualquier parte de Colombia.</p>
-                        
-                        <a href="https://wa.link/o8oobr"><img src="img/what.png" alt="whatsapp"></a>
-                    </div>
-
-                    <div class="col-lg-6 cont-fotos" data-aos="fade-left" data-aos-duration="3000">
-                        <img src="img/fotografia.jpg" alt="fotografia">
-                    </div>
-                </div>
-            </article>
-        </section>
-
         <section id="contacto">
         <div class="container">
             <article class="container" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="3000">
                 <h2>Contáctame</h2>
-                <p>Para más información comunicate al número celular <a href="https://wa.link/o8oobr" target="_blank"> 3223611781</a></p>
-                <p>o al correo <a href="mailto:efraingezbar@gmail.com?Subject=Me20%gustaria20%conocer20%más20%sobre20%el20%servicio20%de20%fotografía"> Fotoafichesplus@gmail.com </a> </p>
+                <p>Para más información comunicate al número celular <a href="https://wa.link/43ymto" target="_blank"> 310 214 5464</a></p>
+                <p>o al correo <a href="mailto:gezbarg@gmail.com?Subject=Me20%gustaria20%conocer20%más20%sobre20%el20%servicio20%de20%fotografía"> gezbarg@gmail.com </a> </p>
             </article>
         </div>
         </section>
